# Build
add_executable(TestList
TestList.cpp
)

target_link_libraries(TestList
m
)

  #${GLFW_LIBRARIES}
  #m)
#add_dependencies(example glfw ${COPY_BINARY})

# Build tests
#add_executable(tests
 # tests.cpp
  #vec2.cpp
  #mat2.cpp
  #rectangle.cpp
  #circle.cpp)
#target_link_libraries(tests
 # ${GLFW_LIBRARIES})

